# track-a-stock

./: LICENSE  README.md  app.py  finance.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: render-mermaid.yml
data/: users.db
docs/: architecture.mmd
src/app/: __init__.py  config.py  db_init.py  routes.py
src/app/static/css/: styles.css
src/app/static/js/: scripts.js
src/app/templates/: add.html  buy.html  history.html  index.html  layout.html
static/: styles.css
templates/: change.html  layout.html  login.html  quote.html  quoted.html  register.html  sell.html
